unpackaged/main/default/objects/Asset/fields/Type_de_produit__c.field-meta.xml
<CustomField>
    <fullName>Type_de_produit__c</fullName>
    <label>Type de produit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VL</fullName>
            </value>
            <value>
                <fullName>PL</fullName>
            </value>
            <value>
                <fullName>Remorque</fullName>
            </value>
            <value>
                <fullName>Semi-remorque</fullName>
            </value>
            <value>
                <fullName>Tracteur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>