unpackaged/main/default/objects/Asset/fields/Type_fiche__c.field-meta.xml
<CustomField>
    <fullName>Type_fiche__c</fullName>
    <label>Type fiche</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amenagement</fullName>
            </value>
            <value>
                <fullName>Equipement</fullName>
            </value>
            <value>
                <fullName>Option</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>