unpackaged/main/default/objects/Asset/fields/Ultimate_account__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_account__c</fullName>
    <formula>Account.UltimateAccount__r.Id</formula>
    <label>Ultimate account</label>
    <type>Text</type>
</CustomField>