unpackaged/main/default/objects/Asset/fields/URL_Case_PF_Assist__c.field-meta.xml
<CustomField>
    <fullName>URL_Case_PF_Assist__c</fullName>
    <label>URL Case PF Assist</label>
    <type>Url</type>
</CustomField>