unpackaged/main/default/objects/Asset/fields/Utilisation__c.field-meta.xml
<CustomField>
    <fullName>Utilisation__c</fullName>
    <label>Utilisation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>VPC</fullName>
            </value>
            <value>
                <fullName>CONT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>