unpackaged/main/default/objects/Asset/fields/Volume_utile__c.field-meta.xml
<CustomField>
    <fullName>Volume_utile__c</fullName>
    <label>Volume utile</label>
    <length>100</length>
    <type>Text</type>
</CustomField>