unpackaged/main/default/objects/Asset/fields/WarningMajKmIgloo__c.field-meta.xml
<CustomField>
    <fullName>WarningMajKmIgloo__c</fullName>
    <label>Statut dernière Maj km</label>
    <length>255</length>
    <type>Text</type>
</CustomField>