unpackaged/main/default/objects/Asset/listViews/Community_Containers.listView-meta.xml
<ListView>
    <fullName>Community_Containers</fullName>
    <columns>ASSET.NAME</columns>
    <columns>Date_IMMAT__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Agence__c</columns>
    <columns>IMMAT__c</columns>
    <columns>Position__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ASSET.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Asset.Parc_Container</value>
    </filters>
    <label>Community - Containers</label>
    <sharedTo>
        <allCustomerPortalUsers />
    </sharedTo>
</ListView>