unpackaged/main/default/objects/Asset/listViews/Community_V_hicules.listView-meta.xml
<ListView>
    <fullName>Community_V_hicules</fullName>
    <columns>ASSET.NAME</columns>
    <columns>Date_IMMAT__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Agence__c</columns>
    <columns>Agence_Localisation__c</columns>
    <columns>IMMAT__c</columns>
    <columns>Position__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ASSET.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Asset.Parc</value>
    </filters>
    <label>Community - Véhicules</label>
    <sharedTo>
        <allCustomerPortalUsers />
    </sharedTo>
</ListView>