unpackaged/main/default/objects/Asset/listViews/Equipements_01.listView-meta.xml
<ListView>
    <fullName>Equipements_01</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.PARENT</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>ASSET.LAST_UPDATE</columns>
    <columns>Equipement_Famille__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ASSET.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Asset.Equipement</value>
    </filters>
    <label>Equipements</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>