unpackaged/main/default/objects/Asset/listViews/Mes_parcs_Community.listView-meta.xml
<ListView>
    <fullName>Mes_parcs_Community</fullName>
    <columns>ASSET.NAME</columns>
    <columns>Date_IMMAT__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Agence__c</columns>
    <columns>IMMAT__c</columns>
    <columns>Position__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ASSET.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Asset.Parc</value>
    </filters>
    <label>Véhicules</label>
    <sharedTo>
        <roleAndSubordinatesInternal>DirectionGenerale</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>