unpackaged/main/default/objects/Asset/listViews/Tous_les_PARCS.listView-meta.xml
<ListView>
    <fullName>Tous_les_PARCS</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>Agence__c</columns>
    <columns>Agence_Localisation__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ASSET.NAME</field>
        <operation>startsWith</operation>
        <value>PF</value>
    </filters>
    <label>Tous les PARCS</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>